updated README file